test/expected/explain_main_fkr_i.out
explain int main(x)
                 ^
18: error: main() must have 0, 2, or 3 parameters in K&RC
